# swc-deno-loader-plugin

./: deno.json  info.ts  mod.ts
src/: web.ts
src/resolved/https_example.com/: module.ts
swc-deno-loader-plugin/: Cargo.toml  package.json
swc-deno-loader-plugin/src/: info.rs  lib.rs
