[package]
name = "swc-deno-loader-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.94"
serde = "1"
serde_json = "1.0.133"
swc_core = { version = "9.0.*", features = ["ecma_plugin_transform","ecma_parser",
    "ecma_visit",
    "testing"] }
ureq = "2.12.1"
url = "2.5.4"
wasm-bindgen = "0.2.99"

# .cargo/config.toml defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
